fix(post): break words on mobile to prevent overflow

--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -278,6 +278,7 @@
 .postMobile .postMessage {
   padding: 10px;
   font-size: var(--post-mobile-content-font-size);
+  word-break: break-all;
 }
 
 .postMobile .postLink {
